[tool.poetry]
name = "aardvark"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
memory-profiler = "^0.57.0"
flask = "^1.1.2"
pyqt5 = "^5.15.0"
pydictionary = "^2.0.1"
textblob = "^0.15.3"
gensim = "^3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
